# meta-translator

./: .gitignore  CMakeLists.txt  README.md
docs/: meta-translation.md
src/: CMakeLists.txt  MataTranslatorConfig.cmake.in
src/core/: CMakeLists.txt  mtccoreglobal.h
src/core/context/: context.h  elffile.h
src/core/elf/: elffile.cpp  elffile.h  elffile_p.h  programheader.cpp  programheader.h  sectionheader.cpp  sectionheader.h
src/core/io/: elf.h  elffile.cpp  elffile.h  stream.cpp  stream.h
src/core/text/: format.cpp  format.h
src/tools/: CMakeLists.txt
src/tools/mtcc/: CMakeLists.txt  main.cpp
